placed initial HTML containers

--- a/index.htm
+++ b/index.htm
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Document</title>
 </head>
 <body>
-    We are going to add stuff here: navigation, headline, about me, code links, contact info.
+    <header>
+        <nav>
+            navigation goes here
+        </nav>
+    </header>
+    
+    <section id="about-me">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi, est mollitia nihil ad veritatis natus vitae nemo cupiditate, debitis corrupti rem blanditiis eligendi hic dolorum ab expedita aliquid quidem rerum quas. Tenetur quibusdam sed nisi consectetur, tempore incidunt nulla unde laboriosam facilis ullam adipisci, aliquid ab recusandae vitae illum?
+    </section>
+
+    <section id="work">
+        <a href-"#" id="work-1">Work 1</a>
+        <a href-"#" id="work-2">Work 2</a>
+        <a href-"#" id="work-3">Work 3</a>
+        <a href-"#" id="work-4">Work 4</a>
+        <a href-"#" id="work-5">Work 5</a>
+        <a href-"#" id="work-6">Work 6</a>
+    </section>
+
+    <section id="contact-me">
+        <a href="#">lkbootcamp@yahoo.com</a>
+        <a href="#">425.221.0122</a>
+        <a href="https://github.com/lkalliance">GitHub</a>
+        <a href="https://www.linkedin.com/feed/">LinkedIn</a>
+    </section>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
