Added nav link addresses and h2's

--- a/index.htm
+++ b/index.htm
@@ -10,16 +10,23 @@
 </head>
 <body>
     <header>
+        <h1>
+            Lee Klusky
+        </h1>
         <nav>
-            navigation goes here
+            <a href="#about-me">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#contact-me">Contact Me</a>
         </nav>
     </header>
     
     <section id="about-me">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi, est mollitia nihil ad veritatis natus vitae nemo cupiditate, debitis corrupti rem blanditiis eligendi hic dolorum ab expedita aliquid quidem rerum quas. Tenetur quibusdam sed nisi consectetur, tempore incidunt nulla unde laboriosam facilis ullam adipisci, aliquid ab recusandae vitae illum?
+        <h2>About Me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi, est mollitia nihil ad veritatis natus vitae nemo cupiditate, debitis corrupti rem blanditiis eligendi hic dolorum ab expedita aliquid quidem rerum quas. Tenetur quibusdam sed nisi consectetur, tempore incidunt nulla unde laboriosam facilis ullam adipisci, aliquid ab recusandae vitae illum?</p>
     </section>
 
     <section id="work">
+        <h2>Work</h2>
         <a href-"#" id="work-1">Work 1</a>
         <a href-"#" id="work-2">Work 2</a>
         <a href-"#" id="work-3">Work 3</a>
@@ -29,6 +36,7 @@
     </section>
 
     <section id="contact-me">
+        <h2>Contact Me</h2>
         <a href="#">lkbootcamp@yahoo.com</a>
         <a href="#">425.221.0122</a>
         <a href="https://github.com/lkalliance">GitHub</a>
