Added styling to work example links: --Flexbox --borders --entire link fills div, inset paragraph forms label

--- a/index.htm
+++ b/index.htm
@@ -37,22 +37,53 @@
         <h2>Work</h2>
         <ul id="work-items">
             <li>
-                <a href-"#" id="work-1">Work 1</a>
+                <a href-"#" id="work-1">
+                    <p>
+                        <strong>Project 1</strong>
+                        project 1 subhead
+                    </p>
+                </a>
             </li>
             <li>
-                <a href-"#" id="work-2">Work 2</a>
+                <a href-"#" id="work-2">
+                    <p>
+                        <strong>Long title project</strong>
+                        long title project long subhead
+                    </p>
+                </a>
             </li>
             <li>
-                 <a href-"#" id="work-3">Work 3</a>
+                <a href-"#" id="work-3">
+                    <p>
+                        <strong>Project 3</strong>
+                        Project 3 subhead with extra text
+                    </p>
+                </a>
             </li>
             <li>
-                <a href-"#" id="work-4">Work 4</a>
+                <a href-"#" id="work-4">
+                    
+                    <p>
+                        <strong>Num. 4</strong>
+                        Num. 4 project subhead
+                    </p>
+                </a>
             </li>
             <li>
-                <a href-"#" id="work-5">Work 5</a>
+                <a href-"#" id="work-5">
+                    <p>
+                        <strong>Project 5</strong>
+                        Yet another subhead
+                    </p>
+                </a>
             </li>
             <li>
-                <a href-"#" id="work-6">Work 6</a>
+                <a href-"#" id="work-6">
+                    <p>
+                        <strong>Project 6</strong>
+                        This is the last subhead
+                    </p>
+                </a>
             </li>
         </menu>
     </section>
