--- a/index.htm
+++ b/index.htm
@@ -37,55 +37,30 @@
         <h2>Work</h2>
         <ul id="work-items">
             <li>
-                <a href-"#" id="work-1">
+                <a href="https://lkalliance.github.io/old-jeopardy/index.htm" target="_blank" id="work-1">
                     <p>
-                        <strong>Project 1</strong>
-                        project 1 subhead
+                        <strong>Ringnut Jeopardy</strong>
+                        A small venture into Javascript by the untrained
                     </p>
                 </a>
             </li>
             <li>
-                <a href-"#" id="work-2">
+                <a href="https://lkalliance.github.io/old-oscars/" target="_blank" id="work-2">
                     <p>
-                        <strong>Long title project</strong>
-                        long title project long subhead
+                        <strong>Oscar Analysis</strong>
+                        Database of Academy Awards winners
                     </p>
                 </a>
             </li>
             <li>
-                <a href-"#" id="work-3">
+                <a href="https://lkalliance.github.io/old-map/" target="_blank" id="work-3">
                     <p>
-                        <strong>Project 3</strong>
-                        Project 3 subhead with extra text
+                        <strong>Map Pins</strong>
+                        Fun project with my daughter
                     </p>
                 </a>
             </li>
-            <li>
-                <a href-"#" id="work-4">
-                    
-                    <p>
-                        <strong>Num. 4</strong>
-                        Num. 4 project subhead
-                    </p>
-                </a>
-            </li>
-            <li>
-                <a href-"#" id="work-5">
-                    <p>
-                        <strong>Project 5</strong>
-                        Yet another subhead
-                    </p>
-                </a>
-            </li>
-            <li>
-                <a href-"#" id="work-6">
-                    <p>
-                        <strong>Project 6</strong>
-                        This is the last subhead
-                    </p>
-                </a>
-            </li>
-        </menu>
+         </menu>
     </section>
 
     <section id="contact-me">
