added more styling on work links

--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
     <header>
         <h1>
             Lee Klusky
+            <img src="./assets/images/ranger.jpg" alt="Lee Klusky">
         </h1>
         <nav>
             <menu id="section-links">
