--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,11 @@
     
     <section id="about-me">
         <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi, est mollitia nihil ad veritatis natus vitae nemo cupiditate, debitis corrupti rem blanditiis eligendi hic dolorum ab expedita aliquid quidem rerum quas. Tenetur quibusdam sed nisi consectetur, tempore incidunt nulla unde laboriosam facilis ullam adipisci, aliquid ab recusandae vitae illum?</p>
+        <p>
+            I am a person that has worn many hats. I've been in desktop publishing, athletics publicity, software training and support for many products, writing both of editorial and of press releases, and most especially front end web coding. I've worked for educational institutions, for startups, for small companies and for major corporations.
+        <br/><br/>
+            As a current student in the University of Minnesota Coding Bootcamp, I am looking for a new hat, or perhaps more aptly a combinations of some of my past ones. I will come out of this course not only with experience in all the areas I've mentioned above, but with an education in the latest in Javascript, CSS, HTML, jQuery, Node.js, SQL, MongoDB and React. I am willing to work on site in the Twin Cities area, or remotely, or a combination of both.
+        </p>
     </section>
 
     <section id="work">
@@ -68,16 +72,16 @@
         <h2>Contact Me</h2>
         <ul>
             <li>
-                <a href="#">lkbootcamp@yahoo.com</a>
+                <a href="mailto:lee@klusky.com">lee@klusky.com</a>
             </li>
             <li>
                 <a href="#">425.221.0122</a>
             </li>
             <li>
-                <a href="https://github.com/lkalliance">GitHub</a>
+                <a href="https://github.com/lkalliance" target="_blank">GitHub</a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/feed/">LinkedIn</a>
+                <a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a>
             </li>
         </ul>
     </section>
