added fourth work example

--- a/index.htm
+++ b/index.htm
@@ -50,6 +50,13 @@
                 </a>
             </li>
             <li>
+                <a href="https://lkalliance.github.io/old-dragging/" target="_blank" id="work-4">
+                    <p>
+                        <strong>Dragging Exercise</strong>
+                        Click and drag to navigate ECG and make strips
+                    </p>
+                </a>
+            <li>
                 <a href="https://lkalliance.github.io/old-oscars/" target="_blank" id="work-2">
                     <p>
                         <strong>Oscar Analysis</strong>
