Transferred values to variables, created hover effects on work items

--- a/index.htm
+++ b/index.htm
@@ -75,7 +75,7 @@
          </menu>
     </section>
 
-    <section id="contact-me">
+    <footer id="contact-me">
         <h2>Contact Me</h2>
         <ul>
             <li>
@@ -91,10 +91,6 @@
                 <a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a>
             </li>
         </ul>
-    </section>
-
-    <footer>
-
     </footer>
     
 </body>
