added resume link

--- a/index.htm
+++ b/index.htm
@@ -86,6 +86,9 @@
                 <a href="#">425.221.0122</a>
             </li>
             <li>
+                <a href="#" target="_blank">Résumé</a>
+            </li>
+            <li>
                 <a href="https://github.com/lkalliance" target="_blank">GitHub</a>
             </li>
             <li>
