--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/63add05e98.js" crossorigin="anonymous"></script>
+    <title>Lee Klusky CV</title>
 </head>
 <body>
     <header>
