--- a/index.htm
+++ b/index.htm
@@ -33,9 +33,10 @@
     <section id="about-me">
         <h2>About Me</h2>
         <p>
-            I am a person that has worn many hats. I've been in desktop publishing, athletics publicity, software training and support for many products, writing both of editorial and of press releases, and most especially front end web coding. I've worked for educational institutions, for startups, for small companies and for major corporations.
-        <br/>&nbsp;<br/>
-            As a current student in the University of Minnesota Coding Bootcamp, I am looking for a new hat, or perhaps more aptly a combinations of some of my past ones. I will come out of this course not only with experience in all the areas I've mentioned above, but with an education in the latest in Javascript, CSS, HTML, jQuery, Node.js, SQL, MongoDB and React. I am willing to work on site in the Twin Cities area, or remotely, or a combination of both.
+            I am a person that has worn many hats. I've been in desktop publishing, athletics publicity, software training and support for many products, writing both of editorial and of press releases, and most especially front end web coding. I've worked for educational institutions, for startups, for small companies and for major corporations. Now I'm looking for a new hat, or perhaps a new combination of my past ones.
+        </p>
+        <p>           
+            As a current student in the University of Minnesota Coding Bootcamp, I will soon have experience in all the areas I've mentioned above, and with an education in the latest in Javascript, CSS, HTML, jQuery, Node.js, SQL, MongoDB and React. I am willing to work on site in the Twin Cities area, or remotely, or a combination of both.
         </p>
     </section>
 
