added one more work example

--- a/index.htm
+++ b/index.htm
@@ -68,6 +68,14 @@
                 </a>
             </li>
             <li>
+                <a href="https://lkalliance.github.io/module-1-challenge/" target="_blank" id="work-5">
+                    <p>
+                        <strong>Horiseon</strong>
+                        Refactoring an existing page
+                    </p>
+                </a>
+            </li>
+            <li>
                 <a href="https://lkalliance.github.io/old-map/" target="_blank" id="work-3">
                     <p>
                         <strong>Map Pins</strong>
