Replaced headshot and updated site screenshot

--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
     <header>
         <h1>
             Lee Klusky
-            <img src="./assets/images/ranger.jpg" alt="Lee Klusky">
+            <img src="./assets/images/my-headshot.jpg" alt="Lee Klusky">
         </h1>
         <nav>
             <menu id="section-links">
