improved HTML semantics by removing the header image from inside the h1 tag

--- a/index.htm
+++ b/index.htm
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <script src="https://kit.fontawesome.com/63add05e98.js" crossorigin="anonymous"></script>
-    <title>Lee Klusky CV</title>
+    <title>Lee Klusky Professional Profile</title>
 </head>
 <body>
     <header>
         <h1>
             Lee Klusky
-            <img src="./assets/images/photo-of-me.jpg" alt="Lee Klusky">
         </h1>
-        <nav>
+         <img src="./assets/images/photo-of-me.jpg" alt="Lee Klusky">
+         <nav>
             <menu id="section-links">
                 <li>
                     <a href="#about-me">About Me</a>
