Set resume link to point to PDF

--- a/index.htm
+++ b/index.htm
@@ -95,7 +95,7 @@
                 <a href="#">425.221.0122</a>
             </li>
             <li>
-                <a href="#" target="_blank">Résumé</a>
+                <a href="./assets/images/Lee-Klusky-4.pdf" target="_blank">Résumé</a>
             </li>
             <li>
                 <a href="https://github.com/lkalliance" target="_blank">GitHub</a>
