--- a/index.htm
+++ b/index.htm
@@ -31,17 +31,17 @@
     
     <section id="about-me">
         <h2>About Me</h2>
-        <p>
+        <p class="main">
             I am a person that has worn many hats. I've been in desktop publishing, athletics publicity, software training and support for many products, writing both of editorial and of press releases, and most especially front end web coding. I've worked for educational institutions, for startups, for small companies and for major corporations. Now I'm looking for a new hat, or perhaps a new combination of my past ones.
         </p>
-        <p>           
+        <p class="main">           
             As a current student in the University of Minnesota Coding Bootcamp, I will soon have experience in all the areas I've mentioned above, and with an education in the latest in Javascript, CSS, HTML, jQuery, Node.js, SQL, MongoDB and React. I am willing to work on site in the Twin Cities area, or remotely, or a combination of both.
         </p>
     </section>
 
     <section id="work">
         <h2>Work</h2>
-        <ul id="work-items">
+        <ul id="work-items" class="main">
             <li>
                 <a href="https://lkalliance.github.io/old-dragging/" target="_blank" id="work-4">
                     <p>
@@ -87,7 +87,7 @@
 
     <footer id="contact-me">
         <h2>Contact Me</h2>
-        <ul>
+        <ul class="main">
             <li>
                 <a href="mailto:lee@klusky.com">lee@klusky.com</a>
             </li>
