Removed the class from the previous commit, and reordered the work items

--- a/index.htm
+++ b/index.htm
@@ -31,22 +31,22 @@
     
     <section id="about-me">
         <h2>About Me</h2>
-        <p class="main">
+        <p>
             I am a person that has worn many hats. I've been in desktop publishing, athletics publicity, software training and support for many products, writing both of editorial and of press releases, and most especially front end web coding. I've worked for educational institutions, for startups, for small companies and for major corporations. Now I'm looking for a new hat, or perhaps a new combination of my past ones.
         </p>
-        <p class="main">           
+        <p>           
             As a current student in the University of Minnesota Coding Bootcamp, I will soon have experience in all the areas I've mentioned above, and with an education in the latest in Javascript, CSS, HTML, jQuery, Node.js, SQL, MongoDB and React. I am willing to work on site in the Twin Cities area, or remotely, or a combination of both.
         </p>
     </section>
 
     <section id="work">
         <h2>Work</h2>
-        <ul id="work-items" class="main">
+        <ul id="work-items">
             <li>
-                <a href="https://lkalliance.github.io/old-dragging/" target="_blank" id="work-4">
+                <a href="https://lkalliance.github.io/module-1-challenge/" target="_blank" id="work-5">
                     <p>
-                        <strong>Dragging Exercise</strong>
-                        Click and drag to navigate ECG and make strips
+                        <strong>Horiseon</strong>
+                        Refactoring an existing page
                     </p>
                 </a>
             </li>
@@ -54,7 +54,15 @@
                 <a href="https://lkalliance.github.io/old-jeopardy/index.htm" target="_blank" id="work-1">
                     <p>
                         <strong>Ringnut Jeopardy</strong>
-                        A small venture into Javascript by the untrained
+                        A venture into Javascript by the untrained
+                    </p>
+                </a>
+            </li>
+            <li>
+                <a href="https://lkalliance.github.io/old-dragging/" target="_blank" id="work-4">
+                    <p>
+                        <strong>Dragging Exercise</strong>
+                        Navigate ECG and make strips
                     </p>
                 </a>
             </li>
@@ -63,14 +71,6 @@
                     <p>
                         <strong>Oscar Analysis</strong>
                         Database of Academy Awards winners
-                    </p>
-                </a>
-            </li>
-            <li>
-                <a href="https://lkalliance.github.io/module-1-challenge/" target="_blank" id="work-5">
-                    <p>
-                        <strong>Horiseon</strong>
-                        Refactoring an existing page
                     </p>
                 </a>
             </li>
@@ -87,7 +87,7 @@
 
     <footer id="contact-me">
         <h2>Contact Me</h2>
-        <ul class="main">
+        <ul>
             <li>
                 <a href="mailto:lee@klusky.com">lee@klusky.com</a>
             </li>
