--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
         <h1>
             Lee Klusky
         </h1>
-         <img src="./assets/images/photo-of-me.jpg" alt="Lee Klusky">
+         <img src="./assets/images/lee_head_shot.png" alt="Lee Klusky">
          <nav>
             <menu id="section-links">
                 <li>
