update for workfish

--- a/index.htm
+++ b/index.htm
@@ -42,6 +42,14 @@
     <section id="work">
         <h2>Work</h2>
         <ul id="work-items">
+            <li id="work-6">
+                <a href="https://lkalliance.github.io/Moon-Fish/" target="_blank">
+                    <p>
+                        <strong>Moon Fish</strong>
+                        Combining Solunar Theory and weather
+                    </p>
+                </a>
+            </li>
             <li id="work-5">
                 <a href="https://lkalliance.github.io/module-1-challenge/" target="_blank">
                     <p>
